css gap fixed navigator

--- a/style.css
+++ b/style.css
@@ -656,6 +656,13 @@ a.btn:hover::before{
     flex-wrap: wrap;
     row-gap: 8rem;
     column-gap: 8rem;
+    -webkit-row-gap: 8rem;
+    -moz-row-gap: 8rem;
+    -ms-row-gap: 8rem;
+    -webkit-column-gap: 8rem;
+    -moz-column-gap: 8rem;
+    -ms-column-gap: 8rem;
+
 }
 .cardProject{
     display: flex;
